fixed extra margin on the page

--- a/public/css/coco.css
+++ b/public/css/coco.css
@@ -23,7 +23,6 @@ a {
 }
 
 .container-fluid {
-    margin: 0;
     padding: 0;
 }
 
@@ -77,7 +76,7 @@ a {
     -moz-background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: none;
+    margin: 0;
 }
 
 #block1 {
@@ -87,6 +86,14 @@ a {
 #block2 {
     background-image: url('../img/cocosun.jpeg');
     text-align: center;
+}
+
+.col-md-12 {
+    padding: 0;
+}
+
+.row {
+    margin: 0 !important;
 }
 
 #block3, #block4 {
